# Resume_CLI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  result.json
.github/workflows/: ci.yml
resume_cli/: __init__.py  ai.py  cli.py  config.py  exceptions.py  models.py  pdf.py
tests/: test_ai.py  test_cli.py  test_pdf.py
