[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-cli"
version = "0.1.0"
description = "AI-powered resume parsing and scoring CLI tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pdfplumber>=0.11",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.scripts]
resume-cli = "resume_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
